hphp/hack/test/typecheck/inout/bad_inout_use_lvalue6.php.exp
File "bad_inout_use_lvalue6.php", line 11, characters 11-13:
Invalid lvalue (Parsing[1002])
